# gloai

./: .gitignore  .npmrc  AGENTS.md  DETAILED_FEATURE_COMPARISON.md  LICENSE  PROJECT_INTRODUCTION.md  README.md  README_zh.md  electron-builder.json  electron-tsconfig.json  feishu_log.txt  feishu_log2.txt  githuberror  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  trigger.txt  tsconfig.json  vite.config.ts
.github/workflows/: android-build.yml  build-goclaw-android.yml  build-mac.yml  build.yml
1bak/LobsterAI-0.1.22/: .gitignore  electron-builder.json
public/: SKILLs
resources/: error.html
sandbox/agent-runner/: index.js  package.json
sandbox/image/: .dockerignore  Dockerfile  README.md  README.zh-CN.md  build.sh
sandbox/runtime/: README.md  README.zh-CN.md  build-runtime-macos.sh
scripts/: build-sandbox-image-docker.sh  build-sandbox-image-mac.sh  build-sandbox-in-wsl.bat  electron-builder-hooks.cjs  fix-mac-icon-display.sh  generate-app-icon.js  generate-tray-icons.js  notarize.js  nsis-installer.nsh  publish-sandbox-image.sh  rebuild-sandbox.bat  regenerate-mac-icon.sh  setup-windows-env.bat  upload-sandbox-image.py
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: android.json  default.json  mobile.json
src-tauri/examples/: test_dirs.rs
src-tauri/goclaw-android/: Cargo.toml  build-android-rust.sh
src-tauri/goclaw-android/jni/: goclaw_jni.go
src-tauri/goclaw-android/src/: lib.rs
src-tauri/src/: cowork.rs  crypto.rs  database.rs  database_test.rs  dialog.rs  dialog_android.rs  filesystem.rs  goclaw.rs  goclaw_test.rs  im_gateway.rs  im_gateway_test.rs  lib.rs  logger.rs  main.rs  open_helper.rs  open_helper_android.rs  scheduler.rs  scheduler_test.rs  shell.rs  skills.rs  storage.rs  system.rs  system_test.rs  tuptup.rs  update_manager.rs  update_manager_android.rs
src-tauri/src/im/: connectivity_test.rs  dingtalk.rs  discord.rs  feishu.rs  gateway.rs  llm_config.rs  logging.rs  message_handler.rs  mod.rs  network_monitor.rs  telegram.rs  tests.rs  wework.rs  whatsapp.rs
src/main/: appConstants.ts  coworkStore.ts  logger.ts  main.ts  preload.ts  skillManager.ts  trayManager.ts
src/renderer/: App.tsx  config.ts  index.css  main.tsx
(+107 files in other folders)
