[package]
name = "ggclaw"
version = "1.0.0"
description = "ggclaw - 基于 Rust 技术构建的 AI 桌面助手"
authors = ["ggclaw Team"]
license = "CC-BY-NC-ND-4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ggclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
directories-next = "2.0"
dirs = "5.0.1"
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sys-locale = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.31", features = ["serde_json", "bundled"] }
winreg = { version = "0.50.0", optional = true }
tar = "0.4"
flate2 = "1.0"
tokio-tungstenite = "0.23"
futures-util = "0.3"
cron = "0.12"
image = "0.25"
log = "0.4"
async-trait = "0.1"
base64 = "0.22"
sha1 = "0.10"
regex = "1.10"
lazy_static = "1.4"
aes-gcm = "0.10"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
rand = "0.8"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
open = "5.0"

[dev-dependencies]
tempfile = "3.10"

[target.'cfg(windows)'.dependencies]
winreg = "0.50.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
