[package]
name = "goclaw-android"
version = "0.1.0"
edition = "2021"

[lib]
name = "goclaw"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
android_logger = "0.14"
once_cell = "1.19"
